[package]
name = "pcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["fs", "sync", "io-util", "macros", "rt"] }
async-trait = "0.1.77"
regex = "1.10.3"
once_cell = "1.19.0"
log = "0.4.21"
futures = "0.3.30"
clap = { version = "4.5.2", features = ["derive"] }
colored = "2.1.0"
